syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.soc.data";

package io.soc;

import "moves.proto";

message GameId {
  string id = 1;
}

message PlayerId {
  string platform = 1;
  string user_id = 2;
}

message MoveEvent {
  oneof move {
    InitialPlacement initial_placement_move = 1;
    RollDice roll_dice_move = 2;
    BuildSettlement build_settlement_move = 3;
    BuildRoad build_road_move = 4;
    BuildCity build_city_move = 5;
    MoveRobberAndSteal move_robber_and_steal_move = 6;
    DiscardResources discard_move = 7;
    PortTrade port_trade_move = 8;
    EndTurn end_turn = 9;

    //Trade moves go here 10-1x

    BuyDevelopmentCard buy_development_card_move = 20;
    PlayKnight play_knight_move = 21;
    PlayYearOfPlenty play_year_of_plenty_move = 22;
    PlayRoadBuilder play_road_builder_move = 23;
    PlayMonopoly play_monopoly_move = 24;
  }
}